# Spacy

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt  deploy_doc.sh  run_in_docker.sh  travisci_rsa.enc
Examples/Eigen_FunG/Nonlinear/: CMakeLists.txt  main.cpp
Spacy/: C1Functional.h  C1Operator.h  C2Functional.h  CMakeLists.txt  Derivative.cpp  Derivative.h  DynamicOperator.h  ForwardIterator.h  Functional.h  HilbertSpaceNorm.cpp  HilbertSpaceNorm.h  InducedScalarProduct.cpp  InducedScalarProduct.h  LinearOperator.h  LinearSolver.h  Norm.h  Operator.h  ScalarProduct.h  Spacy.h  Vector.cpp  Vector.h  VectorSpace.cpp  VectorSpace.h  ZeroVectorCreator.h  c1Functional.hh  c2Functional.hh  derivative.cpp  functional.hh  inducedScalarProduct.cpp  inducedScalarProduct.hh  linearOperator.hh  linearSolver.hh  scalarProduct.hh  spacy.h  vector.hh  vectorSpace.cpp  vectorSpace.hh
Spacy/Adapter/: DealII.h  Eigen.h  FEniCS.h  Kaskade7.h  dealII.hh  fenics.hh  kaskade.hh  kaskadeParabolic.hh
Spacy/Adapter/Eigen/: C1Operator.cpp  C1Operator.h  C2Functional.cpp  C2Functional.h  CompositeStepFunctional.cpp  CompositeStepFunctional.h  Copy.cpp  Copy.h  LinearOperator.cpp  LinearOperator.h  LinearOperatorCreator.cpp  LinearOperatorCreator.h  LinearSolver.cpp  LinearSolver.h  ScalarProduct.h  Vector.cpp  Vector.h  VectorCreator.cpp  VectorCreator.h  c1Operator.hh  c2Functional.hh  compositeStepFunctional.cpp  compositeStepFunctional.hh  linearOperator.hh  linearOperatorCreator.hh  linearSolver.hh  scalarProduct.hh  util.cpp  util.hh  vector.hh  vectorCreator.cpp  vectorCreator.hh
Spacy/Adapter/FEniCS/: AssignXIfPresent.h  C1Operator.h  C2Functional.h  Copy.cpp  Copy.h  L2Product.cpp  L2Product.h  LUSolver.cpp  LUSolver.h  LinearOperator.cpp  LinearOperator.h  OperatorSpace.cpp  OperatorSpace.h  Vector.cpp  Vector.h  VectorSpace.cpp  VectorSpace.h  WriteVTK.cpp  WriteVTK.h  c1Operator.hh  c2Functional.hh  l2Product.cpp  linearOperator.cpp  linearOperator.hh  luSolver.cpp  operatorSpace.cpp  util.cpp  vector.cpp  vectorSpace.cpp  vectorSpace.hh  writeVTK.cpp
Spacy/Adapter/Generic/: LinearOperatorCreator.h  ScalarProduct.cpp  Vector.h  VectorCreator.h  WriteVTK.h  scalarProduct.cpp  vector.hh  vectorCreator.hh
Spacy/Adapter/Kaskade/: C1Operator.h  C2BlockFunctional.h  C2Functional.h  Copy.h  DLY.h  DirectSolver.h  DynamicC1Operator.h  GridRefinement.h  HierarchicalErrorEstimator.h  L2Product.h  LagrangeCGSolver.h  LinearOperator.h  MultiGridSolver.h  Operator.h  OperatorSpace.h  SubspaceRelation.h  Vector.h  VectorSpace.h  WriteVTK.h  c1Operator.hh  c2Functional.hh  directBlockPreconditioner.hh  directSolver.hh  dynamicC1Operator.hh  l2Product.h  lagrangeCGSolver.hh  linearOperator.hh  operator.hh  operatorSpace.hh  preconditioner.hh  util.hh  vector.hh  vectorSpace.hh  writeVTK.hh
Spacy/Adapter/KaskadeParabolic/: DiagHandler.h  DirectSolver.h  LinearOperator.h  MassMatrix.h  ModelPredictiveController.hh  PDESolver.h  PDESolver.h~  PDESolverBase.h  PDESolverSurr.h  SubspaceRelation.h  SurrOperator.h  c1Operator.hh  c2Functional.hh  directBlockPreconditioner.hh  directSolver.hh  errorEstimator.hh  gridManager.hh  linearBlockOperator.hh  preconditioner.hh  preconditioner.hh~  scalarProduct.hh  subCreator.hh  tempGrid.hh  util.hh  vector.hh  vectorSpace.hh  writeVTK.hh
Spacy/Adapter/dealII/: C1FunGOperator.h  C1FungOperatorAssembly.h  C2FunGFunctional.h  C2FunGFunctionalAssembly.h  CG.h  Copy.cpp  Copy.h  Init.h  LinearOperator.h  UMFPACK.h  UMFPACKSolver.hh  Util.h  Vector.h  VectorSpace.h  WriteVTK.h  c1FunGOperator.hh  c2FunGFunctional.hh  c2FunGFunctionalAssembly.hh  cgSolver.hh  copy.cpp  init.hh  linearOperator.hh  util.hh  vector.hh  vectorSpace.hh  writeVTK.hh
Spacy/Adaptivity/: ErrorEstimator.h  SpaceManager.cpp  SpaceManager.h  SpatialAdaptivity.h
Spacy/Algorithm/: DampingFactor.cpp  LipschitzConstant.cpp  LipschitzConstant.h  ODEInt.cpp  ODEInt.h  dampingFactor.hh  lipschitzConstant.hh
Spacy/Algorithm/ACR/: ACR.cpp  ACR.h  acr.cpp  acr.hh
Spacy/Algorithm/CG/: CG.cpp  CG.h  LinearSolver.cpp  LinearSolver.h  Regularization.h  Regularization.hh  RegularizeViaPreconditioner.cpp  RegularizeViaPreconditioner.h  RegularizeViaPreconditioner.hh  TerminationCriteria.cpp  TerminationCriteria.h  TerminationCriterion.h  TriangularStateConstraintPreconditioner.cpp  TriangularStateConstraintPreconditioner.h  cg.cpp  cg.hh  linearSolver.cpp  linearSolver.hh  terminationCriteria.cpp  terminationCriteria.hh  terminationCriterion.hh  triangularStateConstraintPreconditioner.cpp  triangularStateConstraintPreconditioner.hh
Spacy/Algorithm/Chebyshev/: Chebyshev.cpp  Chebyshev.h
Spacy/Algorithm/CompositeStep/: AffineCovariantSolver.cpp  AffineCovariantSolver.h  QuadraticModel.cpp  QuadraticModel.h  affineCovariantSolver.cpp  affineCovariantSolver.hh  quadraticModel.cpp  quadraticModel.hh
Spacy/Algorithm/ICG/: solver.cpp  solver.hh
Spacy/Algorithm/Krylov/: MinRes.cpp  MinRes.h
Spacy/Algorithm/MINRES/: blockDiagPrecond.cpp  blockDiagPrecond.hh  blockDiagPrecond2.cpp  blockDiagPrecond2.hh  minres.cpp  minres.hh
Spacy/Algorithm/Newton/: DampingStrategies.cpp  DampingStrategies.h  Newton.cpp  Newton.h  Parameter.h  (+7 more)
Spacy/Detail/: c1Functional_table.h  c2Functional_table.h  functional_table.h  linearOperator_table.h  vector_table.h
Spacy/Spaces/: ProductSpace.h  RealSpace.h
Spacy/Util/: Cast.h  CompareVTK.h  Copy.h  Exceptions.cpp  Exceptions.h  ForEach.h  Invoke.h  Log.cpp  Log.h  Logger.h  Mixins.h  Printer.h  SmartPointerStorage.h  Timer.cpp  Timer.h  Voider.h
Test/: CMakeLists.txt  mockSetup.hh
Test/Mock/: ScalarProduct.cpp  ScalarProduct.h  c2Functional.cpp  linearOperator.cpp  linearOperator.hh  linearSolver.cpp  linearSolver.hh  norm.cpp  norm.hh  scalarProduct.hh  vector.cpp  vector.hh  vectorCreator.cpp
Test/Spacy/: C1Operator.cpp  IndefiniteLinearSolver.cpp  LinearOperator.cpp  VectorSpace.cpp  c1Functional.cpp  c1Operator.cpp  c2Functional.cpp  functional.cpp  indefiniteLinearSolver.cpp  linearOperator.cpp  operator.cpp
(+301 files in other folders)
